--- a/assets/scss/_contents.scss
+++ b/assets/scss/_contents.scss
@@ -1,64 +1,149 @@
-.contents {
-    padding: 75px  0;
-    background: #F0F6FF;
+.seo_analysis {
+  padding: 80px 0;
+  .seo_audit {
+    &__columns {
+      margin-top: 53px;
+      column-count: 3;
+      column-gap: 20px;
+      color: #222529;
+      position: relative;
+      z-index: 23;
+      background: #fff;
+      @media (max-width: 1200px) {
+        column-count: 2;
+      }
 
-    .contents_items{
-        @media (max-width) {
-            align-items: flex-end !important;
-        }
-        
-        @media (max-width:556px) {
-            flex-direction: column;
-        }
+      @media (max-width: 768px) {
+        column-count: 1;
+      }
     }
-    .section_title{
-        margin-bottom: 15px;
-        @media (max-width:556px) {
-            margin-bottom: 7px;
+
+    &__block {
+      padding: 22px;
+      margin-bottom: 20px;
+      break-inside: avoid;
+      border-radius: 23px;
+      border-radius: 23px;
+      background: #fff;
+      box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
+      position: relative;
+      z-index: 2;
+      &:last-child {
+        background: #fff;
+        &::before {
+          content: "";
+          position: absolute;
+          inset: 0;
+          display: block;
+          background: url("../images/end_block_bg.png") no-repeat center;
+          background-size: cover;
+          z-index: -1;
+          width: 100%;
+          height: 100%;
+        }
+      }
+      &:nth-child(3) {
+        padding-right: 29px;
+        li {
+          width: 86%;
+        }
+      }
+      &_header {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+      }
+      h5 {
+        color: #222529;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+      }
+      ul {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+        color: #222529;
+        margin-top: 20px;
+        li {
+          position: relative;
+          padding-left: 30px;
+          list-style: none;
+          color: #222529;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 5px;
+            color: #3498db;
+            background-image: url("../images/true.svg");
+            background-size: contain;
+            background-repeat: no-repeat;
+            z-index: 12;
+            width: 18px;
+            height: 16px;
           }
+        }
+      }
     }
-    .contents_link {
-        width: 50%;
-        gap: 15px 0;
-        padding: 0;
-        @media (max-width:768px) {
-            width: 80%;
-        }
-        @media (max-width:556px) {
-            width: 100%;
-          }
-        li{
-            list-style: none;
-        }
-        a {
-            color: #333;
-        }
+  }
+}
+.analytics_page {
+  &_items {
+    gap: 50px;
+  }
+  &_item {
+    gap: 74px;
+    &:nth-child(n + 2) {
+      padding-top: 32px;
+      border-top: 1px solid #eaeaea;
     }
-    .contents_img{
-        width: 50%;
-        padding: 0;
-        position: relative;
-        img{
-            width: 100%;
-            object-fit: contain;
-            @media (max-width:768px) {
-              position: absolute;
-              bottom: -45px;
-              width: 250px;
-              left: -60px;
-            }
-            @media (max-width:556px) {
-                position: static;
-                width: 100%;
-              }
-            
-        }
-        @media (max-width:768px) {
-            width: 20%;
-        }
-        @media (max-width:556px) {
-            margin-top: 40px;
-            width: 100%;
-          }
+    .section_title {
+      font-size: 26px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      .button {
+        display: inline-block;
+        padding: 12px;
+        font-size: 26px;
+        font-style: normal;
+        font-weight: 700;
+      }
     }
+    .button {
+      margin-top: 20px;
+    }
+    .hiden_text {
+      color: #222529;
+      &::after {
+        height: 37px;
+      }
+    }
+
+    &_left {
+      position: relative;
+      z-index: 2;
+    }
+  }
+  .item_image {
+    position: relative;
+    img:not(.bg) {
+      border-radius: 23px;
+      background: #fff;
+      padding: 5px;
+      position: relative;
+      z-index: 1;
+    }
+    .bg {
+      position: absolute;
+      inset: 0;
+      margin: auto;
+    }
+  }
 }
