--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,124 +1,130 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import 'hero';
-@import 'region';
-@import 'contents';
-@import 'price';
-@import 'seo_consult_form';
-@import 'seo_information';
-@import 'chart';
-@import 'seo_training';
-@import 'purchase';
-@import 'advantages';
-@import 'portfolio';
-@import 'course';
-@import 'features';
-@import 'seo_education';
-@import 'comments';
-@import 'consultation';
-@import 'faq';
-@import 'offer';
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import "hero";
+@import "seo_section";
+@import "contents";
+@import "price";
+@import "seo_consult_form";
+@import "seo_information";
+@import "chart";
+@import "seo_training";
+@import "purchase";
+@import "advantages";
+@import "portfolio";
+@import "course";
+@import "features";
+@import "seo_education";
+@import "comments";
+@import "consultation";
+@import "faq";
+@import "offer";
 
-@font-face {
-    font-family: 'Microsoft Sans Serif';
-    src: url(../fonts/micross.woff);
+*,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-ul,li,p{
-    padding: 0;
-    margin: 0;
+ul,
+li,
+p {
+  padding: 0;
+  margin: 0;
 }
 body {
-    font-family:'Roboto';
-    font-size: 16px;
-    font-weight: 400;
-    background-color:#FFFFFF;
+  font-family: "Inter";
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  background-color: #ffffff;
 }
-.wrapper{
-    overflow: hidden;
+.wrapper {
+  overflow: hidden;
 }
-.container{
-    max-width:1160px;
-    margin: 0 auto;
-    @media (max-width:1024px) {
-        max-width: 768px;
-    }
-    @media (max-width:768px) {
-        max-width: 556px;
-    }
-}
-// flex
-.flex {
-    display: flex;
-    &.between {
-        justify-content: space-between;
-    }
-
-    &.center {
-        justify-content: center;
-    }
-
-    &.end {
-        justify-content: flex-end;
-    }
-
-    &.start {
-        justify-content: flex-start;
-    }
-
-    &.column {
-        flex-direction: column;
-    }
-
-    &.a_center {
-        align-items: center;
-    }
-
-    &.a_start {
-        align-items: flex-start;
-    }
-
-    &.a_end {
-        align-items: flex-end;
-    }
-    &.wrap{
-        flex-wrap: wrap;
-    }
-
-}
-.section_title{
-color: #333;
-font-size: 40px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-@media (max-width:556px) {
-    font-size: 30px;
+.container {
+  max-width: 1320px;
+  margin: 0 auto;
+  @media (max-width: 1024px) {
+    max-width: 768px;
+  }
+  @media (max-width: 768px) {
+    max-width: 556px;
   }
 }
-.button{
-padding: 20px 39px;
-justify-content: center;
-align-items: flex-start;
-gap: 10px;
-text-align: center;
-font-size: 18px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-cursor: pointer;
-border-radius: 30px;
-background: #FFF;
-text-decoration: none;
-border: 0;
+.section_title {
+  color: #222529;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  @media (max-width: 556px) {
+    font-size: 26px;
+  }
+  span {
+    color: #2b72f4;
+  }
 }
-.blue{
-    color: #126CC5 !important;
+.section_description {
+  color: #222529;
 }
-.blue_dark{
-    color: #1C17A2 !important;
+.button {
+  border-radius: 100px;
+  background: #2b72f4;
+  padding: 13px 48px;
+  outline: none;
+  border: 0;
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  display: block;
+  width: fit-content;
+  text-decoration: none;
+  &.no_bg {
+    border-radius: 100px;
+    border: 1px solid #2b72f4;
+    background: #fff;
+    color: #2b72f4;
+  }
+}
+.blue {
+  color: #126cc5 !important;
+}
+.blue_dark {
+  color: #1c17a2 !important;
+}
+.breadcrumbs {
+  gap: 12px;
+  color: #222529;
+  list-style: none;
+  a {
+    color: #222529;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration: none;
+  }
+}
+.hiden_text {
+  margin-top: 20px;
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 0;
+
+    width: 100%;
+    height: 38px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.8) 0%, #fff 100%);
+  }
 }
