--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,20 +3,15 @@
 @import "seo_section";
 @import "contents";
 @import "price";
-@import "seo_consult_form";
-@import "seo_information";
-@import "chart";
+@import "online_site";
 @import "seo_training";
-@import "purchase";
 @import "advantages";
-@import "portfolio";
-@import "course";
 @import "features";
-@import "seo_education";
 @import "comments";
-@import "consultation";
+@import "benefits";
 @import "faq";
-@import "offer";
+@import "blog";
+@import "consult";
 
 *,
 h1,
