--- a/assets/scss/_comments.scss
+++ b/assets/scss/_comments.scss
@@ -1,67 +1,72 @@
 .comments {
-    padding: 75px 0;
+  padding: 50px 0;
+  background: #f1f5f9;
+  margin-top: 135px;
+  &_items {
+    gap: 50px 0;
+    margin-top: 41px;
+  }
 
-    &_items {
-        margin-top: 28px;
-        gap: 40px 0;
-
-        @media (max-width:1024px) {
-            gap: 30px 0;
+  &_item {
+    padding: 32px;
+    width: calc(33.33% - 25px);
+    border-radius: 23px;
+    background: #fff;
+    box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
+    color: #222529;
+    gap: 88px 0;
+    &:nth-child(2) {
+      margin-top: 50px;
+    }
+    &:nth-child(4),
+    &:nth-child(6) {
+      margin-top: -50px;
+    }
+    &_top {
+      gap: 41px 0;
+      .stars {
+        margin-top: 12px;
+      }
+      &_content {
+        gap: 12px;
+        & > img {
+          height: 54px;
+          width: 54px;
+          border-radius: 50%;
+          object-fit: cover;
+          flex: 0 0 auto;
         }
-
-        @media (max-width:556px) {
-            gap: 22px 0;
-        }
+      }
     }
 
-    &_item {
-        padding: 35px;
-        width: calc(50% - 20px);
-        border-radius: 30px;
-        background: #FFF;
-        box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.15);
+    .item_top {
+      gap: 15px;
 
-        @media (max-width:1024px) {
-            width: calc(50% - 10px);
-        }
-
-        @media (max-width:768px) {
-            width: 100%;
-        }
-
-        @media (max-width:556px) {
-            padding: 25px 20px 37px;
-        }
-
-        .item_top {
-            gap: 15px;
-
-            @media (max-width:556px) {
-                gap: 10px;
-            }
-        }
-
-        .user_name {
-            color: #333;
-            font-size: 26px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: normal;
-
-            @media (max-width:1024px) {
-                font-size: 22px;
-            }
-        }
-
-        .comments_info {
-            margin-top: 15px;
-            color: #333;
-            font-family: 'Roboto';
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-        }
+      @media (max-width: 556px) {
+        gap: 10px;
+      }
     }
 
+    .user_name {
+      color: #333;
+      font-size: 26px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+
+      @media (max-width: 1024px) {
+        font-size: 22px;
+      }
+    }
+
+    .comments_info {
+      margin-top: 15px;
+      color: #333;
+      font-family: "Roboto";
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
+  }
 }
