--- a/assets/scss/_faq.scss
+++ b/assets/scss/_faq.scss
@@ -1,40 +1,31 @@
 .faq {
-    padding: 75px 0;
-
-    &_items {
-        gap: 30px 0;
-        flex-wrap: wrap;
-        margin-top: 50px;
+  padding: 80px 0 0;
+  &_items {
+    border-radius: 23px;
+    background: #fff;
+    box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
+    padding: 32px;
+    margin-top: 50px;
+    gap: 20px;
+    color: #222529;
+  }
+  &_item {
+    &:first-child {
+      padding-top: 0;
+      border-top: none;
     }
-
-    &_item {
-        width: calc(50% - 20px);
-        @media (max-width:768px) {
-            width: 100%;
-        }
-        .faq_title {
-            color: #1C17A2;
-            font-size: 26px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: normal;
-            padding-bottom: 15px;
-            position: relative;
-            @media (max-width:556px) {
-                font-size: 22px
-            }
-            &::after{
-                content: '';
-                width: 70%;
-                height: 2px ;
-                background-color: #1C17A2;
-                display: block;
-                position: absolute;
-                bottom: 0;
-            }
-        }
-        .faq_description{
-            margin-top: 15px;
-        }
+    &:last-child {
+      padding-bottom: 0;
     }
+    padding: 20px 0;
+    gap: 20px;
+    border-top: 1px solid #eaeaea;
+    &_header {
+      color: #222529;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+    }
+  }
 }
