--- a/assets/scss/_benefits.scss
+++ b/assets/scss/_benefits.scss
@@ -5,6 +5,9 @@
   background-position: center;
   background-size: 100% 100%;
   padding: 50px 0;
+  @media (max-width: 1024px) {
+    margin-top: 50px;
+  }
   &_items {
     margin-top: 63px;
     gap: 39px 0;
@@ -13,6 +16,13 @@
   &_item {
     width: calc(50% - 63px);
     gap: 32px;
+    @media (max-width: 1024px) {
+      width: calc(50% - 13px);
+      gap: 10px;
+    }
+    @media (max-width: 768px) {
+      width: 100%;
+    }
     &-img {
       background: #fff;
       width: 84px;
