--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -187,6 +187,11 @@
 .seo_analysis {
   padding: 80px 0;
 }
+@media (max-width: 768px) {
+  .seo_analysis {
+    padding: 50px 0 24px;
+  }
+}
 .seo_analysis .seo_audit__columns {
   margin-top: 53px;
   column-count: 3;
@@ -217,19 +222,11 @@
   position: relative;
   z-index: 2;
 }
-.seo_analysis .seo_audit__block:last-child {
-  background: #fff;
-}
-.seo_analysis .seo_audit__block:last-child::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  display: block;
-  background: url("../images/end_block_bg.png") no-repeat center;
-  background-size: cover;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
+@media (max-width: 768px) {
+  .seo_analysis .seo_audit__block {
+    margin-bottom: 24px;
+    padding: 20px;
+  }
 }
 .seo_analysis .seo_audit__block:nth-child(3) {
   padding-right: 29px;
@@ -248,6 +245,11 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+@media (max-width: 768px) {
+  .seo_analysis .seo_audit__block h5 {
+    font-size: 20px;
+  }
 }
 .seo_analysis .seo_audit__block ul {
   display: flex;
@@ -279,16 +281,55 @@
   width: 18px;
   height: 16px;
 }
+@media (max-width: 768px) {
+  .seo_analysis .seo_audit__block ul li::before {
+    width: 17px;
+    height: 12px;
+  }
+}
 
 .analytics_page_items {
   gap: 50px;
 }
+@media (max-width: 1024px) {
+  .analytics_page_items {
+    gap: 32px;
+  }
+}
 .analytics_page_item {
   gap: 74px;
+}
+@media (max-width: 1200px) {
+  .analytics_page_item {
+    gap: 24px;
+  }
+}
+@media (max-width: 1024px) {
+  .analytics_page_item {
+    flex-direction: column;
+  }
+}
+@media (max-width: 1024px) {
+  .analytics_page_item img {
+    width: 100%;
+  }
 }
 .analytics_page_item:nth-child(n+2) {
   padding-top: 32px;
   border-top: 1px solid #eaeaea;
+}
+@media (max-width: 1024px) {
+  .analytics_page_item:nth-child(n+2) {
+    flex-direction: column-reverse;
+  }
+}
+@media (max-width: 1024px) {
+  .analytics_page_item:nth-child(n+2) .section_title span {
+    margin: 0 0 0 auto;
+  }
+}
+.analytics_page_item:nth-child(n+2) .button {
+  margin: 20px 0 0 auto;
 }
 .analytics_page_item .section_title {
   font-size: 26px;
@@ -296,12 +337,23 @@
   font-weight: 700;
   line-height: normal;
 }
+@media (max-width: 1024px) {
+  .analytics_page_item .section_title {
+    font-size: 22px;
+  }
+}
 .analytics_page_item .section_title .button {
   display: inline-block;
   padding: 12px;
   font-size: 26px;
   font-style: normal;
   font-weight: 700;
+}
+@media (max-width: 1024px) {
+  .analytics_page_item .section_title .button {
+    padding: 6px;
+    font-size: 22px;
+  }
 }
 .analytics_page_item .button {
   margin-top: 20px;
@@ -316,8 +368,39 @@
   position: relative;
   z-index: 2;
 }
+@media (max-width: 768px) {
+  .analytics_page_item_left {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .analytics_page_item_left .section_title span {
+    width: 47px;
+    height: 47px;
+    border-radius: 50%;
+    background: #2b72f4;
+    flex: 0 0 auto;
+    display: flex;
+    font-size: 22px;
+    color: #fff;
+    justify-content: center;
+    align-items: center;
+    line-height: normal;
+    padding: 6px;
+  }
+}
+@media (max-width: 768px) {
+  .analytics_page_item_left .button.no_bg {
+    width: 100%;
+  }
+}
 .analytics_page .item_image {
   position: relative;
+}
+@media (max-width: 768px) {
+  .analytics_page .item_image {
+    width: 100%;
+  }
 }
 .analytics_page .item_image img:not(.bg) {
   border-radius: 23px;
@@ -326,10 +409,21 @@
   position: relative;
   z-index: 1;
 }
+@media (max-width: 768px) {
+  .analytics_page .item_image img:not(.bg) {
+    padding: 0;
+  }
+}
 .analytics_page .item_image .bg {
   position: absolute;
   inset: 0;
   margin: auto;
+}
+@media (max-width: 768px) {
+  .analytics_page .item_image .bg {
+    bottom: auto;
+    top: -128px;
+  }
 }
 
 .seo_price {
@@ -507,13 +601,34 @@
   }
 }
 
+.online_site {
+  padding: 80px 0 0;
+}
 .online_site .site_banner {
-  background: url(../images/clip_bg.svg) no-repeat center/100%;
+  background: url(../images/clip_bg.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
   max-width: 510px;
   width: 100%;
 }
+@media (max-width: 1024px) {
+  .online_site .site_banner {
+    background: url(../images/banner_mobile.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
+    max-width: 100%;
+  }
+}
 .online_site_items {
   gap: 50px 0;
+  margin-top: 50px;
+}
+@media (max-width: 1024px) {
+  .online_site_items {
+    gap: 20px 0;
+  }
 }
 .online_site_item {
   border-radius: 23px;
@@ -521,15 +636,57 @@
   gap: 87px;
   overflow: hidden;
 }
+@media (max-width: 1024px) {
+  .online_site_item {
+    flex-direction: column-reverse !important;
+    gap: 12px;
+  }
+}
 .online_site_item:nth-child(even) .site_banner {
   background: url(../images/site_bg.svg) no-repeat center/100%;
+}
+@media (max-width: 1024px) {
+  .online_site_item:nth-child(even) .site_banner {
+    background: url(../images/banner_mobile.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
+    max-width: 100%;
+  }
 }
 .online_site_item:nth-child(even) .site_info {
   padding: 32px 50px 32px 0px;
 }
+@media (max-width: 1024px) {
+  .online_site_item:nth-child(even) .site_info {
+    width: 100%;
+    padding: 0 20px 55px;
+  }
+}
+@media (max-width: 1024px) {
+  .online_site_item:nth-child(even) .site_info > img {
+    width: 62px;
+  }
+}
+@media (max-width: 1024px) {
+  .online_site_item:nth-child(even) {
+    flex-direction: column !important;
+  }
+}
 .online_site_item .site_info {
   color: #222529;
   padding: 32px 0px 32px 50px;
+}
+@media (max-width: 1024px) {
+  .online_site_item .site_info {
+    width: 100%;
+    padding: 0 20px 55px;
+  }
+}
+@media (max-width: 1024px) {
+  .online_site_item .site_info > img {
+    width: 62px;
+  }
 }
 .online_site_item .site_info_title {
   font-size: 24px;
@@ -537,6 +694,16 @@
   font-weight: 700;
   line-height: normal;
   margin-top: 24px;
+}
+@media (max-width: 1024px) {
+  .online_site_item .site_info_title {
+    margin-top: 32px;
+  }
+}
+@media (max-width: 768px) {
+  .online_site_item .site_info_title {
+    font-size: 20px;
+  }
 }
 .online_site_item .site_info .site_list_title {
   color: #8e939a;
@@ -552,6 +719,16 @@
 .online_site_item .site_info .site_list li {
   font-weight: 400;
   gap: 12px;
+}
+@media (max-width: 1240px) {
+  .online_site_item {
+    gap: 20px;
+  }
+}
+@media (max-width: 1024px) {
+  .online_site_item {
+    flex-direction: column;
+  }
 }
 
 .advantages {
@@ -915,6 +1092,11 @@
   background-size: 100% 100%;
   padding: 50px 0;
 }
+@media (max-width: 1024px) {
+  .benefits {
+    margin-top: 50px;
+  }
+}
 .benefits_items {
   margin-top: 63px;
   gap: 39px 0;
@@ -923,6 +1105,17 @@
 .benefits_item {
   width: calc(50% - 63px);
   gap: 32px;
+}
+@media (max-width: 1024px) {
+  .benefits_item {
+    width: calc(50% - 13px);
+    gap: 10px;
+  }
+}
+@media (max-width: 768px) {
+  .benefits_item {
+    width: 100%;
+  }
 }
 .benefits_item-img {
   background: #fff;
