--- a/assets/scss/_contents.scss
+++ b/assets/scss/_contents.scss
@@ -1,5 +1,8 @@
 .seo_analysis {
   padding: 80px 0;
+  @media (max-width: 768px) {
+    padding: 50px 0 24px;
+  }
   .seo_audit {
     &__columns {
       margin-top: 53px;
@@ -28,20 +31,11 @@
       box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
       position: relative;
       z-index: 2;
-      &:last-child {
-        background: #fff;
-        &::before {
-          content: "";
-          position: absolute;
-          inset: 0;
-          display: block;
-          background: url("../images/end_block_bg.png") no-repeat center;
-          background-size: cover;
-          z-index: -1;
-          width: 100%;
-          height: 100%;
-        }
+      @media (max-width: 768px) {
+        margin-bottom: 24px;
+        padding: 20px;
       }
+
       &:nth-child(3) {
         padding-right: 29px;
         li {
@@ -59,6 +53,9 @@
         font-style: normal;
         font-weight: 700;
         line-height: normal;
+        @media (max-width: 768px) {
+          font-size: 20px;
+        }
       }
       ul {
         display: flex;
@@ -87,6 +84,10 @@
             z-index: 12;
             width: 18px;
             height: 16px;
+            @media (max-width: 768px) {
+              width: 17px;
+              height: 12px;
+            }
           }
         }
       }
@@ -96,24 +97,58 @@
 .analytics_page {
   &_items {
     gap: 50px;
+    @media (max-width: 1024px) {
+      gap: 32px;
+    }
   }
   &_item {
     gap: 74px;
+    @media (max-width: 1200px) {
+      gap: 24px;
+    }
+    @media (max-width: 1024px) {
+      flex-direction: column;
+    }
+    img {
+      @media (max-width: 1024px) {
+        width: 100%;
+      }
+    }
     &:nth-child(n + 2) {
       padding-top: 32px;
       border-top: 1px solid #eaeaea;
+      @media (max-width: 1024px) {
+        flex-direction: column-reverse;
+      }
+      .section_title {
+        span {
+          @media (max-width: 1024px) {
+            margin: 0 0 0 auto;
+          }
+        }
+      }
+      .button {
+        margin: 20px 0 0 auto;
+      }
     }
     .section_title {
       font-size: 26px;
       font-style: normal;
       font-weight: 700;
       line-height: normal;
+      @media (max-width: 1024px) {
+        font-size: 22px;
+      }
       .button {
         display: inline-block;
         padding: 12px;
         font-size: 26px;
         font-style: normal;
         font-weight: 700;
+        @media (max-width: 1024px) {
+          padding: 6px;
+          font-size: 22px;
+        }
       }
     }
     .button {
@@ -129,21 +164,57 @@
     &_left {
       position: relative;
       z-index: 2;
+      @media (max-width: 768px) {
+        width: 100%;
+      }
+      .section_title {
+        span {
+          @media (max-width: 768px) {
+            width: 47px;
+            height: 47px;
+            border-radius: 50%;
+            background: #2b72f4;
+            flex: 0 0 auto;
+            display: flex;
+            font-size: 22px;
+            color: #fff;
+            justify-content: center;
+            align-items: center;
+            line-height: normal;
+            padding: 6px;
+          }
+        }
+      }
+      .button.no_bg {
+        @media (max-width: 768px) {
+          width: 100%;
+        }
+      }
     }
   }
   .item_image {
     position: relative;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
     img:not(.bg) {
       border-radius: 23px;
       background: #fff;
       padding: 5px;
       position: relative;
       z-index: 1;
+      @media (max-width: 768px) {
+        padding: 0;
+      }
     }
     .bg {
       position: absolute;
       inset: 0;
       margin: auto;
+      @media (max-width: 768px) {
+        bottom: auto;
+        top: -128px;
+      }
     }
   }
 }
