--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1019,9 +1019,21 @@
   background: #f1f5f9;
   margin-top: 135px;
 }
+@media (max-width: 1024px) {
+  .comments {
+    margin-top: 80px;
+  }
+}
 .comments_items {
   gap: 50px 0;
   margin-top: 41px;
+}
+@media (max-width: 768px) {
+  .comments_items {
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 32px;
+  }
 }
 .comments_item {
   padding: 32px;
@@ -1032,14 +1044,46 @@
   color: #222529;
   gap: 88px 0;
 }
+@media (max-width: 1024px) {
+  .comments_item {
+    width: calc(50% - 15px);
+  }
+}
+@media (max-width: 768px) {
+  .comments_item {
+    width: 100%;
+    padding: 20px;
+    gap: 32px;
+  }
+}
 .comments_item:nth-child(2) {
   margin-top: 50px;
+}
+@media (max-width: 1024px) {
+  .comments_item:nth-child(2) {
+    margin-top: 0;
+  }
 }
 .comments_item:nth-child(4), .comments_item:nth-child(6) {
   margin-top: -50px;
 }
+@media (max-width: 1024px) {
+  .comments_item:nth-child(4), .comments_item:nth-child(6) {
+    margin-top: 0;
+  }
+}
 .comments_item_top {
   gap: 41px 0;
+}
+@media (max-width: 768px) {
+  .comments_item_top {
+    gap: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .comments_item_top h3 {
+    font-size: 20px;
+  }
 }
 .comments_item_top .stars {
   margin-top: 12px;
@@ -1097,10 +1141,25 @@
     margin-top: 50px;
   }
 }
+@media (max-width: 768px) {
+  .benefits {
+    background: url(../images/mobile_clippath.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
+  }
+}
 .benefits_items {
   margin-top: 63px;
   gap: 39px 0;
   padding-bottom: 95px;
+}
+@media (max-width: 768px) {
+  .benefits_items {
+    gap: 20px;
+    padding-bottom: 50px;
+    margin-top: 22px;
+  }
 }
 .benefits_item {
   width: calc(50% - 63px);
@@ -1115,6 +1174,7 @@
 @media (max-width: 768px) {
   .benefits_item {
     width: 100%;
+    gap: 13px;
   }
 }
 .benefits_item-img {
@@ -1124,12 +1184,26 @@
   flex: 0 0 auto;
   border-radius: 50%;
 }
+@media (max-width: 768px) {
+  .benefits_item-img {
+    width: 62px;
+    height: 62px;
+  }
+  .benefits_item-img img {
+    width: 24px;
+  }
+}
 .benefits_item_title {
   color: #fff;
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+@media (max-width: 768px) {
+  .benefits_item_title {
+    font-size: 20px;
+  }
 }
 .benefits_item p {
   margin-top: 20px;
@@ -1151,6 +1225,13 @@
   margin-left: auto;
   margin-right: auto;
 }
+@media (max-width: 768px) {
+  .benefits .next_section {
+    width: 112px;
+    height: 112px;
+    margin-bottom: -100px;
+  }
+}
 .benefits .next_section img {
   transition: all 1s linear;
   position: relative;
@@ -1171,6 +1252,16 @@
 .faq {
   padding: 80px 0 0;
 }
+@media (max-width: 768px) {
+  .faq {
+    padding: 50px 0;
+  }
+}
+@media (max-width: 768px) {
+  .faq .section_title {
+    text-align: center;
+  }
+}
 .faq_items {
   border-radius: 23px;
   background: #fff;
@@ -1180,8 +1271,17 @@
   gap: 20px;
   color: #222529;
 }
+@media (max-width: 768px) {
+  .faq_items {
+    margin-top: 32px;
+    padding: 20px;
+    border-radius: 23px;
+    background: #fff;
+    box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
+  }
+}
 .faq_item {
-  padding: 20px 0;
+  padding: 20px 0 0;
   gap: 20px;
   border-top: 1px solid #eaeaea;
 }
@@ -1198,6 +1298,11 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+@media (max-width: 768px) {
+  .faq_item_header {
+    font-size: 20px;
+  }
 }
 
 .blog {
