--- a/assets/scss/_comments.scss
+++ b/assets/scss/_comments.scss
@@ -2,9 +2,17 @@
   padding: 50px 0;
   background: #f1f5f9;
   margin-top: 135px;
+  @media (max-width: 1024px) {
+    margin-top: 80px;
+  }
   &_items {
     gap: 50px 0;
     margin-top: 41px;
+    @media (max-width: 768px) {
+      flex-direction: column;
+      gap: 20px;
+      margin-top: 32px;
+    }
   }
 
   &_item {
@@ -15,15 +23,37 @@
     box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
     color: #222529;
     gap: 88px 0;
+    @media (max-width: 1024px) {
+      width: calc(50% - 15px);
+    }
+    @media (max-width: 768px) {
+      width: 100%;
+      padding: 20px;
+      gap: 32px;
+    }
     &:nth-child(2) {
       margin-top: 50px;
+      @media (max-width: 1024px) {
+        margin-top: 0;
+      }
     }
     &:nth-child(4),
     &:nth-child(6) {
       margin-top: -50px;
+      @media (max-width: 1024px) {
+        margin-top: 0;
+      }
     }
     &_top {
       gap: 41px 0;
+      @media (max-width: 768px) {
+        gap: 20px;
+      }
+      h3 {
+        @media (max-width: 768px) {
+          font-size: 20px;
+        }
+      }
       .stars {
         margin-top: 12px;
       }
