--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1308,8 +1308,39 @@
 .blog {
   padding-top: 80px;
 }
+@media (max-width: 768px) {
+  .blog {
+    padding-top: 0px;
+  }
+}
+@media (max-width: 768px) {
+  .blog_top {
+    gap: 20px;
+    flex-direction: column;
+  }
+}
+@media (max-width: 768px) {
+  .blog_top .section_title {
+    text-align: center;
+  }
+}
+.blog .button {
+  flex: 0 0 auto;
+}
+@media (max-width: 768px) {
+  .blog .button {
+    width: 100%;
+  }
+}
 .blog_items {
   padding-top: 50px;
+}
+@media (max-width: 1200px) {
+  .blog_items {
+    flex-wrap: wrap;
+    gap: 20px 0;
+    padding-top: 32px;
+  }
 }
 .blog_item {
   width: calc(25% - 10px);
@@ -1318,6 +1349,16 @@
   background: #fff;
   box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.15);
   color: #222529;
+}
+@media (max-width: 1200px) {
+  .blog_item {
+    width: calc(50% - 10px);
+  }
+}
+@media (max-width: 768px) {
+  .blog_item {
+    width: 100%;
+  }
 }
 .blog_item img {
   width: 100%;
@@ -1328,6 +1369,11 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+@media (max-width: 768px) {
+  .blog_item_title {
+    font-size: 20px;
+  }
 }
 .blog_item p {
   margin-top: 20px;
@@ -1355,12 +1401,22 @@
 }
 
 .consult {
-  padding: 80px 0;
+  padding: 80px 24px;
+}
+@media (max-width: 768px) {
+  .consult {
+    padding: 50px 15px;
+  }
 }
 .consult .container {
   border-radius: 23px;
   background: linear-gradient(106deg, #19428e 7.43%, #2b72f4 94.39%);
   padding: 46px;
+}
+@media (max-width: 768px) {
+  .consult .container {
+    padding: 40px 20px;
+  }
 }
 .consult .section_title {
   color: #fff;
@@ -1372,6 +1428,11 @@
 .consult_form {
   gap: 20px 32px;
   margin-top: 32px;
+}
+@media (max-width: 768px) {
+  .consult_form {
+    gap: 32px;
+  }
 }
 .consult_form input {
   width: 100%;
@@ -1386,6 +1447,12 @@
 }
 .consult_form input::placeholder {
   color: #fff;
+}
+@media (max-width: 768px) {
+  .consult_form input {
+    max-width: 100%;
+    width: 100%;
+  }
 }
 .consult_form .consultation_item:last-child {
   margin-top: 5px;
@@ -1412,7 +1479,7 @@
   width: fit-content !important;
   color: #fe4c1c;
 }
-@media (max-width: 556px) {
+@media (max-width: 768px) {
   .consult_form .button {
     width: 100% !important;
   }
