--- a/assets/scss/_consult.scss
+++ b/assets/scss/_consult.scss
@@ -1,9 +1,15 @@
 .consult {
-  padding: 80px 0;
+  padding: 80px 24px;
+  @media (max-width: 768px) {
+    padding: 50px 15px;
+  }
   .container {
     border-radius: 23px;
     background: linear-gradient(106deg, #19428e 7.43%, #2b72f4 94.39%);
     padding: 46px;
+    @media (max-width: 768px) {
+      padding: 40px 20px;
+    }
   }
   .section_title {
     color: #fff;
@@ -16,7 +22,9 @@
   &_form {
     gap: 20px 32px;
     margin-top: 32px;
-
+    @media (max-width: 768px) {
+      gap: 32px;
+    }
     input {
       width: 100%;
       border: 0;
@@ -29,6 +37,10 @@
       padding: 13px 20px;
       &::placeholder {
         color: #fff;
+      }
+      @media (max-width: 768px) {
+        max-width: 100%;
+        width: 100%;
       }
     }
     .consultation_item {
@@ -62,7 +74,7 @@
     .button {
       width: fit-content !important;
       color: #fe4c1c;
-      @media (max-width: 556px) {
+      @media (max-width: 768px) {
         width: 100% !important;
       }
     }
