--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -304,7 +304,7 @@
     gap: 24px;
   }
 }
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .analytics_page_item {
     flex-direction: column;
   }
@@ -318,7 +318,7 @@
   padding-top: 32px;
   border-top: 1px solid #eaeaea;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .analytics_page_item:nth-child(even) {
     flex-direction: column-reverse;
   }
@@ -373,11 +373,22 @@
   font-weight: 700;
   margin: 16px 0;
 }
+@media (max-width: 768px) {
+  .analytics_page_item .hiden_text h2 {
+    font-size: 17px;
+    margin: 8px 0;
+  }
+}
 .analytics_page_item .hiden_text.no-after {
   max-height: fit-content;
 }
 .analytics_page_item .hiden_text::after {
   height: 37px;
+}
+@media (max-width: 768px) {
+  .analytics_page_item .hiden_text p {
+    font-size: 14px;
+  }
 }
 .analytics_page_item_left {
   position: relative;
