--- a/assets/scss/_contents.scss
+++ b/assets/scss/_contents.scss
@@ -106,7 +106,7 @@
     @media (max-width: 1200px) {
       gap: 24px;
     }
-    @media (max-width: 1024px) {
+    @media (max-width: 1200px) {
       flex-direction: column;
     }
     img {
@@ -117,7 +117,7 @@
     &:nth-child(even) {
       padding-top: 32px;
       border-top: 1px solid #eaeaea;
-      @media (max-width: 1024px) {
+      @media (max-width: 1200px) {
         flex-direction: column-reverse;
       }
       .section_title {
@@ -167,6 +167,10 @@
         font-size: 20px;
         font-weight: 700;
         margin: 16px 0;
+        @media (max-width: 768px) {
+          font-size: 17px;
+          margin: 8px 0;
+        }
       }
 
       &.no-after {
@@ -174,6 +178,11 @@
       }
       &::after {
         height: 37px;
+      }
+      p{
+        @media (max-width: 768px) {
+          font-size: 14px;
+        }
       }
     }
 
